--- a/package.json
+++ b/package.json
@@ -17,6 +17,11 @@
   "author": "Papawlo",
   "license": "ISC",
   "devDependencies": {
+    "@babel/core": "^7.13.14",
+    "@babel/preset-env": "^7.13.12",
+    "@webpack-cli/serve": "^1.3.1",
+    "autoprefixer": "^9.8.5",
+    "babel-loader": "^8.2.2",
     "clean-webpack-plugin": "^3.0.0",
     "copy-webpack-plugin": "^6.0.3",
     "css-loader": "^3.6.0",
@@ -28,9 +33,13 @@
     "mini-css-extract-plugin": "^0.9.0",
     "node-sass": "^4.14.1",
     "optimize-css-assets-webpack-plugin": "^5.0.3",
-    "resolve-url-loader": "^3.1.1",
+    "postcss-loader": "^3.0.0",
+    "postcss-preset-env": "^6.7.0",
+    "purgecss-webpack-plugin": "^4.0.3",
+    "resolve-url-loader": "^3.1.2",
     "sass-loader": "^9.0.2",
     "style-loader": "^1.2.1",
+    "terser-webpack-plugin": "^4.2.3",
     "url-loader": "^4.1.0",
     "webpack": "^4.43.0",
     "webpack-cli": "^3.3.12",
